[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/playerBlue_walk3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/playerBlue_walk2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/playerBlue_stand.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/playerBlue_hit.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/playerBlue_up3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/playerBlue_up1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/playerBlue_up2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/playerBlue_walk1.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.6904, 26.8877 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 24.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "hurt",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 28.5

[sub_resource type="CapsuleShape2D" id=4]
radius = 18.25
height = 18.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 23.4515
height = 8.55132

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}

[node name="player_hitbox" type="Area2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2( 0, 20 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="player_hurtbox" type="Area2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hurtbox"]
shape = SubResource( 4 )

[node name="player_collect_box" type="Area2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_collect_box"]
shape = SubResource( 5 )

[connection signal="area_entered" from="player_hitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="area_entered" from="player_hurtbox" to="." method="_on_player_hurtbox_area_entered"]
[connection signal="area_entered" from="player_collect_box" to="." method="_on_player_collect_box_area_entered"]
